appId: drift.armenia.driver
---
- runScript: ../../../selectors/home-selectors.js
- runScript: ../../../selectors/ride-requests-selectors.js
- runScript: ../../../scripts/extractData.js

- launchApp

- runFlow:
    when:
      visible: ${output.homeSelectors.assertion_not_logged_in}
    file: "../../Login/login-with-valid-phone.yaml"

- runFlow:
    when:
      visible: ${output.homeSelectors.ok_button}
    commands: 
      - tapOn: ${output.homeSelectors.ok_button}

- assertWithAI:
    assertion: No any messages found in red field on home screen after login.

- runFlow:
    when:
      visible: ${output.homeSelectors.receive_rides_button}
    commands:
      - tapOn: ${output.homeSelectors.receive_rides_button}

- waitForAnimationToEnd:
    timeout: 20000


- assertWithAI:
    assertion: Map is opened.

- runFlow: ../../../support/flows/send-ride-request-without-destination-evacuator-type.yaml

- launchApp:
    stopApp: false


- assertVisible: ${output.rideRequestSelectors.pick_up_title}
- assertVisible: ${output.rideRequestSelectors.ride_price}

- copyTextFrom: "Մեկնարկի հասցե.*"
- evalScript: ${output.rawAddressText = maestro.copiedText}

- copyTextFrom: "֏ .*-ից"
- evalScript: ${output.rawPriceText = maestro.copiedText}

- runScript: ../../../scripts/extractData.js

- tapOn: ${output.rideRequestSelectors.ride_price}

- waitForAnimationToEnd:
    timeout: 10000

- runFlow:
    when:
      visible: ${output.rideRequestSelectors.arrive_button}
    commands:
      - assertVisible: ${output.extractedData.capturedAddress}
      - assertVisible: ${output.extractedData.capturedPrice}
      - tapOn: ${output.rideRequestSelectors.arrive_button}

- runFlow:
    when:
      visible: ${output.rideRequestSelectors.rider_arrived_button}
    commands:
      - assertVisible: ${output.extractedData.capturedAddress}
      - assertVisible: ${output.extractedData.capturedPrice}
      - tapOn: ${output.rideRequestSelectors.rider_arrived_button}

- tapOn:
    point: ${output.rideRequestSelectors.cancel_button_truck} 
- tapOn: ${output.rideRequestSelectors.send_button}
- tapOn: ${output.rideRequestSelectors.ride_cancel_button}

- assertVisible: ${output.rideRequestSelectors.ride_canceled_dialog}
- tapOn: ${output.rideRequestSelectors.ok_button}

- assertWithAI:
    assertion: Map is opened.