appId: drift.armenia
---
- runScript: ../../selectors/login-selectors.js
- runScript: ../../creds/login-creds.js
- runScript: ../../selectors/dashboard-selectors.js


- clearState: drift.armenia  

- launchApp
- runFlow:
      when:
          visible: ${output.dashboardSelectors.then}
      commands:
          - tapOn: ${output.dashboardSelectors.then}

- assertVisible: ${output.dashboardSelectors.welcome_title}
- tapOn: ${output.loginSelectors.login_button}
- tapOn: ${output.loginSelectors.continue_with_email}
- tapOn: ${output.loginSelectors.email_field}
- inputText: ${output.loginCreds.invalid_email}
- assertVisible: ${output.loginSelectors.email_error}
- assertWithAI:
    assertion: The "Մուտք գործել էլ. փոստով" button is disabled.
