appId: drift.armenia
---
- runScript: ../../selectors/login-selectors.js
- runScript: ../../creds/login-creds.js
- runScript: ../../selectors/dashboard-selectors.js


- clearState: drift.armenia  

- launchApp
- runFlow:
    when:
        visible: ${output.dashboardSelectors.then}
    commands:
        - tapOn: ${output.dashboardSelectors.then}

- assertVisible: ${output.dashboardSelectors.welcome_title}
- tapOn: ${output.loginSelectors.login_button}
- tapOn: ${output.loginSelectors.phone_number_field}
- inputText: ${output.loginCreds.invalid_phone_number}
- tapOn: ${output.loginSelectors.login_confirm_button}
- assertVisible: ${output.loginSelectors.phone_error}
- assertWithAI:
    assertion: The "Մուտք գործել հեռախոսով" button is disabled.