appId: drift.armenia
---
- runScript: ../../../selectors/dashboard-selectors.js
- runScript: ../../../selectors/home-selectors.js
- runScript: ../../../selectors/profile-selectors.js
- runScript: ../../../creds/registration-creds.js


- launchApp

- runFlow:
    when:
      visible: ${output.dashboardSelectors.welcome_title}
    file: "../../Login/login-with-valid-phone.yaml"

- tapOn:
    point: ${output.homeSelectors.profile_section}
- tapOn: ${output.profileSelectors.profile_page}
- tapOn:
    point: ${output.profileSelectors.email_edit}
- tapOn: ${output.profileSelectors.email_field}
- eraseText
- inputText: ${output.registrationCreds.already_registered_email}
- tapOn: ${output.profileSelectors.update_button}
- assertVisible: ${output.profileSelectors.already_used_email_error}
- tapOn:
    point: ${output.profileSelectors.email_back}
- tapOn:
    point: ${output.profileSelectors.email_back}
