appId: drift.armenia
---
- runScript: ../../../selectors/dashboard-selectors.js
- runScript: ../../../selectors/home-selectors.js
- runScript: ../../../selectors/profile-selectors.js
- runScript: ../../../creds/registration-creds.js
- runScript: ../../../selectors/registration-selectors.js
- runScript: ../../../creds/profile-creds.js
- runScript: ../../../scripts/fetch-otp.js 

- evalScript: ${output.createInbox()}

- launchApp

#- runFlow:
#    when:
#      visible: ${output.dashboardSelectors.welcome_title}
#    file: "../../Login/login-with-valid-phone.yaml"

- tapOn:
    point: ${output.homeSelectors.profile_section}
- tapOn: ${output.profileSelectors.profile_page}
- tapOn:
    point: ${output.profileSelectors.email_edit}
- tapOn:
    text: ${output.profileSelectors.email_field}
    repeat: 3
    delay: 100 
- eraseText
- inputText: ${output.emailAddress}
- tapOn: ${output.profileSelectors.update_button}
- evalScript: ${output.waitForOtp(output.inboxId)}

- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    point: ${output.registrationSelectors.otp_field}

- inputText: ${output.otpCode}

- tapOn:
    text: ${output.registrationSelectors.otp_confirm_button}

- evalScript: ${output.deleteCurrentInbox()}